--- a/packages/web-compare/src/app/styles.css
+++ b/packages/web-compare/src/app/styles.css
@@ -4,22 +4,26 @@
 
 .headerBundleStatsLogo {
   width: 156px;
-  color: var(--color-branding);
+  color: inherit;
 }
 
 .headerBundleStatsLogo:active,
+.headerBundleStatsLogo:focus,
 .headerBundleStatsLogo:hover {
-  color: var(--color-branding-dark);
+  color: inherit;
+  opacity: 0.7;
 }
 
 .headerGithubLogo {
   width: var(--space-medium);
-  color: var(--color-gray-ultra-light);
+  color: inherit;
 }
 
 .headerGithubLogo:active,
+.headerGithubLogo:focus,
 .headerGithubLogo:hover {
-  color: var(--color-gray-light);
+  color: inherit;
+  opacity: 0.7;
 }
 
 .headerNavigation {
